--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@shadcn/ui": "^0.0.4",
+    "fabric": "^6.6.1",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.13",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-grid-layout": "^1.5.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "tesseract.js": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
