--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@mui/material": "^6.4.8",
     "@shadcn/ui": "^0.0.4",
     "fabric": "^6.6.1",
     "file-saver": "^2.0.5",
@@ -23,6 +24,7 @@
     "react-dropzone": "^14.3.8",
     "react-grid-layout": "^1.5.1",
     "react-icons": "^5.5.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^7.4.0",
     "tesseract.js": "^6.0.0"
   },
